fixing the mainp page spacing

--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+body {
+  background-color: var(--color-blanchedalmond);
+}
+
 .frame-item {
   width: 20%;
   position: relative;
@@ -25,7 +29,7 @@
   border: 2px solid var(--color-blanchedalmond);
   padding: 10px;
   margin: 10px;
-  top: 3.5%;
+  top: 11%;
   left: 84.5%;
   position: absolute;
 }
@@ -127,7 +131,7 @@
   border: 2px solid var(--color-blanchedalmond);
   padding: 10px;
   margin: 10px;
-  top: 9%;
+  top: 11%;
   left: 84.5%;
   position: absolute;
 }
@@ -210,7 +214,7 @@
       border: 2px solid var(--color-blanchedalmond);
       padding: 10px;
       margin: 10px;
-      top: 2.75%;
+      top: 9%;
       left: 66%;
       position: absolute;
     }
@@ -228,7 +232,7 @@
       border: 2px solid var(--color-blanchedalmond);
       padding: 10px;
       margin: 10px;
-      top: 6.5%;
+      top: 9%;
       left: 66%;
       position: absolute;
     }
